--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,6 @@ jobs:
 
       # run tests!
       - run: gradle test
-      - run: ./gradlew check
-      - run: ./gradlew jacocoTestReport
+      - run: gradlew check
+      - run: gradlew jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
