--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: 'chess/App*')
+	    fileTree(dir: it, exclude: 'chess.connection/*')
         }))
     } 
 }
