--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ jacocoTestReport {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: 'chess/App*')
 	    fileTree(dir: it, exclude: 'chess/connection/*')
+            fileTree(dir: it, exclude: 'chess/model/*')
             fileTree(dir: it, exclude: 'datastructureproject/*')
 	    fileTree(dir: it, exclude: 'logging/*')
         }))
