--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: 'chess/App*')
-	    fileTree(dir: it, exclude: 'chess/connection/*')
-            fileTree(dir: it, exclude: 'chess/model/*')
-            fileTree(dir: it, exclude: 'datastructureproject/*')
+	    fileTree(dir: it, exclude: 'chess/connection/**')
+            fileTree(dir: it, exclude: 'chess/model/**')
+            fileTree(dir: it, exclude: 'datastructureproject/**')
 	    fileTree(dir: it, exclude: 'logging/*')
         }))
     } 
