--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,12 @@ jacocoTestReport {
      
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: 'chess/App*')
-	    fileTree(dir: it, exclude: 'chess/connection/**')
-            fileTree(dir: it, exclude: 'chess/model/**')
-            fileTree(dir: it, exclude: 'datastructureproject/**')
-	    fileTree(dir: it, exclude: 'logging/*')
+            fileTree(dir: it, exclude:[
+	   'chess/App*',
+	   'chess/connection/**',
+           'chess/model/**',
+           'datastructureproject/**',
+	   'logging/*'])
         }))
     } 
 }
