--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ jacocoTestReport {
 	   'chess/App*',
 	   'chess/connection/**',
            'chess/model/**',
+	   'chess/engine/*',
+	   'chess/bot/TestBot*',
            'datastructureproject/**',
 	   'logging/*'])
         }))
